--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,6 @@
  
 # to change language of repo to Python
-    *.MD linguist-language=Python
+    *.md linguist-language=Python
 
 # Handle line endings automatically for files detected as text
 # and leave all files detected as binary untouched.
